// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header NavItem should render properly when isActive is set to false 1`] = `
.c0 {
  color: #ffffff;
  padding: 0 1.2rem;
  border-radius: 0.4rem;
  border: none;
  font-family: inherit;
  text-decoration: none;
  font-size: 1.6rem;
  line-height: 2rem;
  position: relative;
  height: 48px;
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 1.8rem;
  align-items: center;
  text-align: left;
  grid-auto-columns: max-content;
  cursor: pointer;
  transition: all 100ms ease-out;
  color: #ffffff;
  background: transparent;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 :hover {
  color: #ffffff;
  background: #1F6465;
}

.c0 :hover svg * {
  fill: #ffffff;
}

.c0 :active {
  color: #ffffff;
  background: #1A5556;
}

.c0 :active svg * {
  fill: #ffffff;
}

.c0::after {
  content: '';
  position: absolute;
  display: none;
  background: #3CDBC0;
  width: 0.6rem;
  left: -1rem;
  height: 100%;
}

.c0:active {
  background-color: transparent;
}

@media (min-width: 1024px) {
  .c0 {
    background: #012040;
    grid-column-gap: 0.8rem;
    height: 56px;
    font-weight: 600;
    padding: 0 1.6rem;
  }

  .c0::after {
    bottom: calc((56px - 72px) / 2);
    width: calc(100% - 1.6rem * 2);
    left: 1.6rem;
    height: 0.6rem;
  }
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`Header NavItem should render properly when isActive is set to true 1`] = `
.c0 {
  color: #ffffff;
  padding: 0 1.2rem;
  border-radius: 0.4rem;
  border: none;
  font-family: inherit;
  text-decoration: none;
  font-size: 1.6rem;
  line-height: 2rem;
  position: relative;
  height: 48px;
  display: grid;
  grid-auto-flow: column;
  grid-column-gap: 1.8rem;
  align-items: center;
  text-align: left;
  grid-auto-columns: max-content;
  cursor: pointer;
  transition: all 100ms ease-out;
  color: #3CDBC0;
  background: transparent;
}

.c0 svg * {
  fill: #3CDBC0;
}

.c0 :hover {
  color: #ffffff;
  background: #1F6465;
}

.c0 :hover svg * {
  fill: #ffffff;
}

.c0 :active {
  color: #ffffff;
  background: #1A5556;
}

.c0 :active svg * {
  fill: #ffffff;
}

.c0::after {
  content: '';
  position: absolute;
  display: block;
  background: #3CDBC0;
  width: 0.6rem;
  left: -1rem;
  height: 100%;
}

.c0:active {
  background-color: transparent;
}

@media (min-width: 1024px) {
  .c0 {
    background: #012040;
    grid-column-gap: 0.8rem;
    height: 56px;
    font-weight: 600;
    padding: 0 1.6rem;
  }

  .c0::after {
    bottom: calc((56px - 72px) / 2);
    width: calc(100% - 1.6rem * 2);
    left: 1.6rem;
    height: 0.6rem;
  }
}

<div>
  <button
    class="c0"
  />
</div>
`;
